--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+##### Application properties #####
+app.name='@project.name@'
+app.desc='@project.description@'
+app.version='@project.version@'
+app.url=http://localhost:8080
+app.dev-name= Luz Andrea Fernandez
+app.dev-email= 114092@frc.utn.edu.ar
 spring.application.name=scaffolding
