Agregando elementos a aplication properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,25 @@ app.url=http://localhost:8080
 app.dev-name= Luz Andrea Fernandez
 app.dev-email= 114092@frc.utn.edu.ar
 spring.application.name=scaffolding
+
+## Spring JPA ##
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.show-sql=true
+spring.jpa.defer-datasource-initialization=true
+
+## Spring Doc Properties##
+##paquete que escanea buscando la especificación de las apis
+springdoc.packages-to-scan=ar.edu.utn.frc.tup.lciii.controllers
+springdoc.show-actuator=true
+springdoc.swagger-ui.disable-swagger-default-url=true
+#swagger-ui custom path
+#en nuestra aplicacción nos muestre y habilite el swageer
+springdoc.swagger-ui.path=/swagger-ui.html
+
+## Spring Data Source ##
+spring.datasource.url=jdbc:h2:mem:test;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+logging.level.root=TRACE
